add a new endpoint to get note by ID
